## New Features - Bounty Challenges. There is a new challenges.yml file to configure challenges. Ex: Claim x Bounties. These are disabled by default, but you can go into the file and enable it. There is also a new challenges GUI. Use `/bounty challenges`. @851939967177719888 - View bounties with more detail. There is a new view-bounty GUI to display more information on the bounty reward including custom items. The general-currency-item custom item goes with this GUI to display placeholder currency. Use `/bounty check (player)`. @1073280652339847299 - override-type option in the bedrock-gui.yml file to override the GUI type (simple, modal, custom) - Bounty Click Actions. You can now configure which actions occur when a player clicks a bounty in the main GUI. New configuration section called bounty-gui-clicks in the config.yml file. - Trickle Bounties. Added a new config section called trickle-bounties that allows you to control how much of a bounty is claimed, and how much of a bounty you receieve from claiming another bounty. @1214690583042457651 - New messages in language.yml to go with the new features.
## Changes
- GUI backend changes
- Data storage backend changes
- Major SQL changes: SQL requests were reduced significantly. Bounties are now updated from the database every 5 minutes. @780700648652013568
- Renamed SabreFactions to Factions in the config.yml
- You can now create bounty posters for offline players. @723568555362091158
- There is now a minBounty option in the config for the bounty tracker. @698612930723184783
- Multiple bounties on the same person set by the same person are no longer grouped together
- Bedrock skin requests are now async
- Now formatting timezones by player locales if a specific timezone isn't recorded
- Set bounty statistic is now updated after a bounty is added instead of when the bounty is claimed
- Added a new bstats chart for active bounties

## Bug Fixes
- Fixed a bug that occured when removing expired bounties from the SQL da