@@ -3,14 +3,15 @@ package me.jadenp.notbounties.ui.gui;
 import me.jadenp.notbounties.Bounty;
 import me.jadenp.notbounties.Leaderboard;
 import me.jadenp.notbounties.NotBounties;
-import me.jadenp.notbounties.ui.BountyTracker;
+import me.jadenp.notbounties.Setter;
 import me.jadenp.notbounties.ui.gui.bedrock.BedrockGUI;
+import me.jadenp.notbounties.ui.gui.bedrock.BedrockGUIOptions;
+import me.jadenp.notbounties.ui.gui.displayItems.*;
 import me.jadenp.notbounties.utils.BountyManager;
 import me.jadenp.notbounties.utils.SerializeInventory;
-import me.jadenp.notbounties.utils.configuration.ActionCommands;
-import me.jadenp.notbounties.utils.configuration.ConfigOptions;
-import me.jadenp.notbounties.utils.configuration.Immunity;
-import me.jadenp.notbounties.utils.configuration.NumberFormatting;
+import me.jadenp.notbounties.utils.Whitelist;
+import me.jadenp.notbounties.utils.challenges.ChallengeManager;
+import me.jadenp.notbounties.utils.configuration.*;
 import me.jadenp.notbounties.utils.externalAPIs.bedrock.FloodGateClass;
 import me.jadenp.notbounties.utils.externalAPIs.bedrock.GeyserMCClass;
 import net.md_5.bungee.api.chat.ClickEvent;
@@ -27,6 +28,7 @@ import org.bukkit.event.inventory.InventoryCloseEvent;
 import org.bukkit.event.inventory.InventoryType;
 import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.ItemStack;
+import org.bukkit.inventory.meta.ItemMeta;
 import org.bukkit.inventory.meta.SkullMeta;
 import org.bukkit.plugin.Plugin;
 import org.bukkit.scheduler.BukkitRunnable;
@@ -34,18 +36,26 @@ import org.jetbrains.annotations.Nullable;
 
 import java.io.IOException;
 import java.util.*;
-import java.util.stream.Collectors;
 
-import static me.jadenp.notbounties.NotBounties.getNetworkPlayers;
-import static me.jadenp.notbounties.NotBounties.isVanished;
-import static me.jadenp.notbounties.utils.BountyManager.*;
+import static me.jadenp.notbounties.NotBounties.*;
 import static me.jadenp.notbounties.utils.configuration.ConfigOptions.*;
 import static me.jadenp.notbounties.utils.configuration.LanguageOptions.*;
+import static me.jadenp.notbounties.utils.configuration.NumberFormatting.*;
 
 public class GUI implements Listener {
 
     public static final Map<UUID, PlayerGUInfo> playerInfo = new HashMap<>();
     private static final Map<String, GUIOptions> customGuis = new HashMap<>();
+
+
+    public static CustomItem getGeneralCurrencyItem() {
+        if (!customItems.containsKey("general-currency-item")) {
+            CustomItem customItem = new CustomItem(Material.SUNFLOWER, 1, -1, "{currency}", new ArrayList<>(), true, true, false, new ArrayList<>());
+            customItems.put("general-currency-item", customItem);
+            return customItem;
+        }
+        return customItems.get("general-currency-item");
+    }
 
     public static void addGUI(GUIOptions gui, String name) {
         customGuis.put(name, gui);
@@ -57,111 +67,214 @@ public class GUI implements Listener {
         return null;
     }
 
-    public static Map<UUID, String> getGUIValues(Player player, String name, long page, Object[] data) {
+    public static List<DisplayItem> getGUIValues(Player player, String name, long page, Object[] data) {
+        List<DisplayItem> displayItems = new ArrayList<>();
         if (!customGuis.containsKey(name))
-            return new LinkedHashMap<>();
+            return displayItems;
         GUIOptions gui = customGuis.get(name);
         if (page < 1)
             page = 1;
 
         boolean online = (data.length == 0 || !(data[0] instanceof String) || !((String) data[0]).equalsIgnoreCase("offline"));
-        List<UUID> onlinePlayers = getNetworkPlayers().stream().map(OfflinePlayer::getUniqueId).collect(Collectors.toList());
-        LinkedHashMap<UUID, String> values = new LinkedHashMap<>();
+        List<UUID> onlinePlayers = getNetworkPlayers().stream().map(OfflinePlayer::getUniqueId).toList();
         switch (name) {
             case "bounty-gui":
                 List<Bounty> sortedList = BountyManager.getAllBounties(gui.getSortType());
-                for (Bounty bounty : sortedList) {
-                    double bountyAmount = showWhitelistedBounties || player.hasPermission("notbounties.admin") ? bounty.getTotalDisplayBounty() : bounty.getTotalDisplayBounty(player);
-                    if (bountyAmount > 0)
-                        values.put(bounty.getUUID(), String.format("%f", bountyAmount));
-                    if (reducePageCalculations && values.size() > gui.getPlayerSlots().size() * page)
+                for (int i = 0; i < sortedList.size(); i++) {
+                    Bounty bounty = sortedList.get(i);
+                    double bountyAmount = showWhitelistedBounties || player.hasPermission(NotBounties.getAdminPermission()) ? bounty.getTotalDisplayBounty() : bounty.getTotalDisplayBounty(player);
+                    if (bountyAmount > 0) {
+                        List<String> additionalLore = GUIClicks.getClickLore(player, buyBack && bounty.getUUID().equals(player.getUniqueId()), (bounty.getTotalDisplayBounty() * buyBackInterest));
+                        if (bounty.getAllWhitelists().contains(player.getUniqueId())) {
+                            additionalLore.addAll(whitelistNotify);
+                        } else if (!bounty.getAllBlacklists().isEmpty() && !bounty.getAllBlacklists().contains(player.getUniqueId())) {
+                            additionalLore.addAll(whitelistNotify);
+                        } else if (showWhitelistedBounties || player.hasPermission(NotBounties.getAdminPermission())) {
+                            // not whitelisted
+                            for (Setter setter : bounty.getSetters()) {
+                                if (!setter.canClaim(player)) {
+                                    additionalLore.addAll(notWhitelistedLore);
+                                    break;
+                                }
+                            }
+                        }
+                        displayItems.add(new PlayerItem(bounty.getUUID(), bountyAmount, Leaderboard.CURRENT, i, bounty.getLatestSetter(), additionalLore));
+                    }
+                    if (reducePageCalculations && displayItems.size() > gui.getPlayerSlots().size() * page)
                         break;
                 }
                 break;
+            case "view-bounty":
+                if (data.length > 0 && data[0] instanceof UUID uuid) {
+                    Bounty viewedBounty = BountyManager.getBounty(uuid);
+                    if (viewedBounty != null) {
+                        List<Setter> setters = new ArrayList<>(viewedBounty.getSetters());
+                        List<String> additionalLore = player.hasPermission(NotBounties.getAdminPermission()) ? new ArrayList<>(adminEditLore) : new ArrayList<>();
+                        setters.sort(Comparator.comparing(Setter::getUuid)); // same setters will be next to each other
+                        List<ItemStack> concurrentItems = new ArrayList<>();
+                        double concurrentAmount = 0;
+                        double concurrentDisplay = 0;
+                        long latestSet = 0;
+                        int settersAdded = 0;
+                        for (int i = 0; i < setters.size(); i++) {
+                            Setter currentSetter = setters.get(i);
+                            concurrentItems.addAll(currentSetter.getItems());
+                            concurrentAmount += currentSetter.getAmount();
+                            concurrentDisplay += currentSetter.getDisplayAmount();
+                            if (currentSetter.getTimeCreated() > latestSet)
+                                latestSet = currentSetter.getTimeCreated();
+                            if (i == setters.size() - 1 || !currentSetter.getUuid().equals(setters.get(i + 1).getUuid())) {
+                                // at the end of the list, or next setter is different
+                                displayItems.add(new PlayerItem(currentSetter.getUuid(), concurrentDisplay, Leaderboard.CURRENT, settersAdded++, latestSet, additionalLore)); // add player head item
+                                // add items for everything added
+                                if (concurrentAmount != 0) {
+                                    // add currency
+
+                                    if (currency.size() == 1 && !NumberFormatting.shouldUseDecimals()) {
+                                        // change material and amount (possible multiple items) to represent a physical item
+                                        ItemStack item = getGeneralCurrencyItem().getFormattedItem(player, null);
+                                        try {
+                                            Material material = Material.valueOf(currency.get(0).toUpperCase());
+                                            item.setType(material);
+                                        } catch (IllegalArgumentException ignored) {
+                                            // currency is not a placeholder and isn't a currency
+                                        }
+                                        // split items into groups of max stack size
+                                        float valuePerItem = currencyValues.get(currency.get(0));
+                                        int stacks = (int) (concurrentAmount / valuePerItem / item.getMaxStackSize());
+                                        int remainder = (int) (concurrentAmount / valuePerItem % item.getMaxStackSize());
+
+                                        // add items, ignoring the fact that we are using the unmodified class with a heavily modified item
+                                        if (stacks > 0) {
+                                            ItemStack parsedItem = item.clone();
+                                            parsedItem.setAmount(parsedItem.getMaxStackSize());
+                                            ItemMeta meta = parsedItem.getItemMeta();
+                                            if (meta != null) {
+                                                meta.setDisplayName(meta.getDisplayName().replace("{amount}", currencyPrefix + NumberFormatting.formatNumber(valuePerItem * item.getMaxStackSize()) + currencySuffix));
+                                                if (meta.hasLore() && meta.getLore() != null) {
+                                                    List<String> lore = meta.getLore();
+                                                    meta.setLore(lore.stream().map(string -> LanguageOptions.parse(string, valuePerItem * item.getMaxStackSize(), player)).toList());
+                                                }
+                                                parsedItem.setItemMeta(meta);
+                                            }
+                                            for (int j = 0; j < stacks; j++) {
+                                                displayItems.add(new UnmodifiedItem(currentSetter.getUuid(), parsedItem, new ArrayList<>()));
+                                            }
+                                        }
+                                        if (remainder > 0) {
+                                            ItemStack parsedItem = item.clone();
+                                            parsedItem.setAmount(remainder);
+                                            ItemMeta meta = parsedItem.getItemMeta();
+                                            if (meta != null) {
+                                                meta.setDisplayName(meta.getDisplayName().replace("{amount}", currencyPrefix + NumberFormatting.formatNumber(valuePerItem * remainder) + currencySuffix));
+                                                if (meta.hasLore() && meta.getLore() != null) {
+                                                    List<String> lore = meta.getLore();
+                                                    meta.setLore(lore.stream().map(string -> LanguageOptions.parse(string, valuePerItem * remainder, player)).toList());
+                                                }
+                                                parsedItem.setItemMeta(meta);
+                                            }
+                                            displayItems.add(new UnmodifiedItem(currentSetter.getUuid(), parsedItem, new ArrayList<>()));
+                                        }
+                                    } else {
+                                        // add default currency items
+                                        displayItems.add(new CurrencyItem(currentSetter.getUuid(), concurrentAmount, new ArrayList<>()));
+                                    }
+                                }
+                                for (ItemStack item : concurrentItems) {
+                                    displayItems.add(new UnmodifiedItem(currentSetter.getUuid(), item, new ArrayList<>()));
+                                }
+                                // reset concurrent values
+                                concurrentItems.clear();
+                                concurrentAmount = 0;
+                                concurrentDisplay = 0;
+                                latestSet = 0;
+                            }
+                        }
+                    }
+                }
+                break;
             case "leaderboard":
-                Leaderboard leaderboard = data.length > 0 && data[0] instanceof Leaderboard ? (Leaderboard) data[0] : Leaderboard.ALL;
-                values = leaderboard.getFormattedList(0, gui.getPlayerSlots().size(), gui.getSortType());
+                Leaderboard leaderboard = data.length > 0 && data[0] instanceof Leaderboard board ? board : Leaderboard.ALL;
+                int rankIndex = 0;
+                for (Map.Entry<UUID, Double> entry : leaderboard.getSortedList(0, gui.getPlayerSlots().size(), gui.getSortType()).entrySet()) {
+                    displayItems.add(new PlayerItem(entry.getKey(), entry.getValue(), leaderboard, rankIndex++, System.currentTimeMillis(), new ArrayList<>()));
+                }
                 break;
             case "set-bounty":
-                values = Leaderboard.IMMUNITY.getFormattedList(0, gui.getPlayerSlots().size(), gui.getSortType());
-                for (Map.Entry<String, UUID> entry : NotBounties.loggedPlayers.entrySet()) {
-                    if (!values.containsKey(entry.getValue()))
-                        values.put(entry.getValue(), NumberFormatting.currencyPrefix + "0" + NumberFormatting.currencySuffix);
-                }
-                // iterate through to remove specific players
-                Iterator<Map.Entry<UUID, String>> iterator = values.entrySet().iterator();
-                int addedPlayers = 0;
-                while (iterator.hasNext()) {
-                    Map.Entry<UUID, String> entry = iterator.next();
-                    if (reducePageCalculations) {
-                        // remove added players we don't need
-                        if (addedPlayers > gui.getPlayerSlots().size() * page) {
-                            iterator.remove();
-                            continue;
-                        }
-                    }
+                List<UUID> addedPlayers = new ArrayList<>();
+                for (Map.Entry<UUID, Double> entry : Leaderboard.IMMUNITY.getSortedList(0, gui.getPlayerSlots().size(), gui.getSortType()).entrySet()) {
                     OfflinePlayer player1 = Bukkit.getOfflinePlayer(entry.getKey());
-                    if (online) {
-                        // remove if offline or vanished
-                        if (!onlinePlayers.contains(entry.getKey()) || (player.isOnline() && (isVanished(Objects.requireNonNull(player1.getPlayer())) || (NotBounties.serverVersion >= 17 && seePlayerList && !player.canSee(player1.getPlayer()))))) {
-                            iterator.remove();
-                            continue;
-                        }
-                    }
-                    // remove if they are immune
-                    Immunity.ImmunityType immunityType = Immunity.getAppliedImmunity(player1, 69);
-                    if (immunityType == Immunity.ImmunityType.PERMANENT || immunityType == Immunity.ImmunityType.GRACE_PERIOD || immunityType == Immunity.ImmunityType.TIME) {
-                        iterator.remove();
+                    if (online && (!onlinePlayers.contains(entry.getKey()) || (player.isOnline() && (isVanished(Objects.requireNonNull(player1.getPlayer())) || (NotBounties.serverVersion >= 17 && seePlayerList && !player.canSee(player1.getPlayer())))))) {
+                        // skip if offline or vanished
                         continue;
                     }
-                    addedPlayers++;
+                    displayItems.add(new PlayerItem(entry.getKey(), entry.getValue(), Leaderboard.IMMUNITY, addedPlayers.size(), System.currentTimeMillis(), new ArrayList<>()));
+                    addedPlayers.add(entry.getKey());
+                }
+                for (Map.Entry<String, UUID> entry : NotBounties.loggedPlayers.entrySet()) {
+                    if (reducePageCalculations && displayItems.size() > gui.getPlayerSlots().size() * page)
+                        break;
+                    if (!addedPlayers.contains(entry.getValue())) {
+                        OfflinePlayer player1 = Bukkit.getOfflinePlayer(entry.getValue());
+                        if (online && (!onlinePlayers.contains(entry.getValue()) || (player.isOnline() && (isVanished(Objects.requireNonNull(player1.getPlayer())) || (NotBounties.serverVersion >= 17 && seePlayerList && !player.canSee(player1.getPlayer())))))) {
+                            // skip if offline or vanished
+                            continue;
+                        }
+
+                        Immunity.ImmunityType immunityType = Immunity.getAppliedImmunity(player1, 69);
+                        if (immunityType == Immunity.ImmunityType.PERMANENT || immunityType == Immunity.ImmunityType.GRACE_PERIOD || immunityType == Immunity.ImmunityType.TIME) {
+                            // skip if they are immune
+                            continue;
+                        }
+                        displayItems.add(new PlayerItem(entry.getValue(), 0, Leaderboard.IMMUNITY, addedPlayers.size(), System.currentTimeMillis(), new ArrayList<>()));
+                        addedPlayers.add(entry.getValue());
+                    }
                 }
                 break;
             case "set-whitelist":
-                List<UUID> whitelist = NotBounties.getPlayerWhitelist(player.getUniqueId()).getList();
-                for (UUID uuid : whitelist)
-                    values.put(uuid, NumberFormatting.currencyPrefix + Leaderboard.IMMUNITY.getStat(uuid) + NumberFormatting.currencySuffix);
-                for (Map.Entry<UUID, String> entry : Leaderboard.IMMUNITY.getFormattedList(0, gui.getPlayerSlots().size(), gui.getSortType()).entrySet()) {
-                    if (!values.containsKey(entry.getKey()))
-                        values.put(entry.getKey(), entry.getValue());
+                List<UUID> playersAdded = new ArrayList<>();
+                Whitelist whitelist = NotBounties.getPlayerWhitelist(player.getUniqueId());
+                for (UUID uuid : whitelist.getList()) {
+                    List<String> additionalLore = whitelist.isBlacklist() ? blacklistLore : whitelistLore;
+                    displayItems.add(new WhitelistedPlayerItem(uuid, Leaderboard.IMMUNITY.getStat(uuid), Leaderboard.IMMUNITY, playersAdded.size(), System.currentTimeMillis(), additionalLore));
+                    playersAdded.add(uuid);
+                }
+                for (Map.Entry<UUID, Double> entry : Leaderboard.IMMUNITY.getSortedList(0, gui.getPlayerSlots().size(), gui.getSortType()).entrySet()) {
+                    if (!playersAdded.contains(entry.getKey())) {
+                        OfflinePlayer player1 = Bukkit.getOfflinePlayer(entry.getKey());
+                        if (online && (!onlinePlayers.contains(entry.getKey()) || (player.isOnline() && (isVanished(Objects.requireNonNull(player1.getPlayer())) || (NotBounties.serverVersion >= 17 && seePlayerList && !player.canSee(player1.getPlayer())))))) {
+                            // skip if offline or vanished
+                            continue;
+                        }
+                        displayItems.add(new PlayerItem(entry.getKey(), entry.getValue(), Leaderboard.IMMUNITY, playersAdded.size(), System.currentTimeMillis(), new ArrayList<>()));
+                        playersAdded.add(entry.getKey());
+                    }
                 }
                 for (Map.Entry<String, UUID> entry : NotBounties.loggedPlayers.entrySet()) {
-                    if (!values.containsKey(entry.getValue()))
-                        values.put(entry.getValue(), NumberFormatting.currencyPrefix + "0" + NumberFormatting.currencySuffix);
-                    if (reducePageCalculations) {
-                        if (values.size() > gui.getPlayerSlots().size() * page)
-                            break;
-                    }
-                }
-                // iterate through to remove specific players
-                Iterator<Map.Entry<UUID, String>> iterator1 = values.entrySet().iterator();
-                int addedPlayers1 = 0;
-                while (iterator1.hasNext()) {
-                    Map.Entry<UUID, String> entry = iterator1.next();
-                    if (reducePageCalculations) {
-                        // remove extra players we don't need
-                        if (addedPlayers1 > gui.getPlayerSlots().size() * page) {
-                            iterator1.remove();
+                    if (reducePageCalculations && playersAdded.size() > gui.getPlayerSlots().size() * page)
+                        break;
+                    if (!playersAdded.contains(entry.getValue())) {
+                        OfflinePlayer player1 = Bukkit.getOfflinePlayer(entry.getValue());
+                        if (online && (!onlinePlayers.contains(entry.getValue()) || (player.isOnline() && (isVanished(Objects.requireNonNull(player1.getPlayer())) || (NotBounties.serverVersion >= 17 && seePlayerList && !player.canSee(player1.getPlayer())))))) {
+                            // skip if offline or vanished
                             continue;
                         }
+
+                        displayItems.add(new PlayerItem(entry.getValue(), 0, Leaderboard.IMMUNITY, playersAdded.size(), System.currentTimeMillis(), new ArrayList<>()));
+                        playersAdded.add(entry.getValue());
                     }
-                    OfflinePlayer player1 = Bukkit.getOfflinePlayer(entry.getKey());
-                    if (online) {
-                        // remove if offline or vanished
-                        if (!onlinePlayers.contains(entry.getKey()) || (player.isOnline() && (isVanished(Objects.requireNonNull(player1.getPlayer())) || (NotBounties.serverVersion >= 17 && seePlayerList && !player.canSee(player1.getPlayer()))))) {
-                            iterator1.remove();
-                            continue;
-                        }
-                    }
-                    addedPlayers1++;
                 }
+
                 break;
             case "select-price":
-                String uuid = data.length > 0 && data[0] instanceof String ? (String) data[0] : player.getUniqueId().toString();
-                values.put(UUID.fromString(uuid), page + "");
+                if (data.length > 0 && data[0] instanceof String string) {
+                    displayItems.add(new PlayerItem(UUID.fromString(string), page, Leaderboard.CURRENT, 0, System.currentTimeMillis(), new ArrayList<>()));
+                } else {
+                    displayItems.add(new PlayerItem(player.getUniqueId(), page, Leaderboard.CURRENT, 0, System.currentTimeMillis(), new ArrayList<>()));
+                }
                 break;
             case "bounty-item-select":
-                UUID uuid3 = data.length > 0 && data[0] instanceof UUID ? (UUID) data[0] : player.getUniqueId();
+                UUID uuid3 = data.length > 0 && data[0] instanceof UUID uuid ? uuid : player.getUniqueId();
                 double total = 0;
                 try {
                     for (int i = 1; i < data.length; i++) {
@@ -172,22 +285,22 @@ public class GUI implements Listener {
                     Bukkit.getLogger().warning("[NotBounties] Error trying to open the bounty-item-select GUI.");
                     Bukkit.getLogger().warning(e.toString());
                 }
-                values.put(uuid3, NumberFormatting.getValue(total));
+                displayItems.add(new PlayerItem(uuid3, total, Leaderboard.CURRENT, 0, System.currentTimeMillis(), new ArrayList<>()));
                 break;
             case "confirm":
-                UUID uuid1 = data.length > 0 && data[0] instanceof UUID ? (UUID) data[0] : player.getUniqueId();
+                UUID uuid1 = data.length > 0 && data[0] instanceof UUID uuid ? uuid : player.getUniqueId();
                 double price = data.length > 1 && data[1] instanceof Double ? (double) data[1] : 0;
-                values.put(uuid1, NumberFormatting.getValue(price));
+                displayItems.add(new PlayerItem(uuid1, price, Leaderboard.CURRENT, 0, System.currentTimeMillis(), new ArrayList<>()));
                 break;
             case "confirm-bounty":
-                String uuid2 = data.length > 0 && data[0] instanceof UUID ? data[0].toString() : player.getUniqueId().toString();
+                UUID uuid2 = data.length > 0 && data[0] instanceof UUID uuid ? uuid : player.getUniqueId();
                 long price2 = data.length > 1 && data[1] instanceof Long ? (long) data[1] : 0;
-                values.put(UUID.fromString(uuid2), price2 + "");
+                displayItems.add(new PlayerItem(uuid2, price2, Leaderboard.CURRENT, 0, System.currentTimeMillis(), new ArrayList<>()));
                 break;
             default:
                 break;
         }
-        return values;
+    return displayItems;
 
     }
 
@@ -195,53 +308,91 @@ public class GUI implements Listener {
         if (page < 1)
             page = 1;
 
-        String[] replacements = new String[0];
-        if ("leaderboard".equals(name)) {
-            Leaderboard leaderboard = data.length > 0 && data[0] instanceof Leaderboard ? (Leaderboard) data[0] : Leaderboard.ALL;
-            replacements = new String[]{leaderboard.toString()};
-        }
-        if (name.equals("bounty-item-select")) {
-            if (data.length > 1 && data[1] instanceof String[]) {
-                // spread out array of serialized arrays
-                String[] items = (String[]) data[1];
-                Object first = data[0]; // record first obj
-                data = new Object[items.length + 1]; // refactor array for new length
-                data[0] = first; // rewrite first obj
-                System.arraycopy(items, 0, data, 1, items.length); // copy items over
-            }
-            if (data.length > page) {
-                // set to current items
-                replacements = new String[]{data[(int) page].toString()};
-            }
-        }
-        LinkedHashMap<UUID, String> values = (LinkedHashMap<UUID, String>) getGUIValues(player, name, page, data);
+        List<DisplayItem> displayItems = getGUIValues(player, name, page, data);
 
-        if (((floodgateEnabled && new FloodGateClass().isBedrockPlayer(player.getUniqueId())) || (geyserEnabled && new GeyserMCClass().isBedrockPlayer(player.getUniqueId()))) && BedrockGUI.enabled && BedrockGUI.isGUIEnabled(name)) {
+        if (((floodgateEnabled && new FloodGateClass().isBedrockPlayer(player.getUniqueId())) || (geyserEnabled && new GeyserMCClass().isBedrockPlayer(player.getUniqueId()))) && BedrockGUI.isEnabled() && BedrockGUI.isGUIEnabled(name)) {
             // open bedrock gui
-            BedrockGUI.openGUI(player, name, page, values, replacements);
+            BedrockGUI.openGUI(player, name, page, displayItems, data);
         } else {
             // open java gui
             if (!customGuis.containsKey(name))
                 return;
             GUIOptions gui = customGuis.get(name);
-            Inventory inventory = gui.createInventory(player, page, values, replacements);
-            if (playerInfo.containsKey(player.getUniqueId()) && gui.getType().equals(playerInfo.get(player.getUniqueId()).getGuiType()) && player.getOpenInventory().getTitle().equals(playerInfo.get(player.getUniqueId()).getTitle())) {
+            String title = createTitle(gui, player, page, displayItems, data);
+            Inventory inventory = gui.createInventory(player, page, displayItems, title, data);
+            if (playerInfo.containsKey(player.getUniqueId()) && gui.getType().equals(playerInfo.get(player.getUniqueId()).guiType()) && player.getOpenInventory().getTitle().equals(playerInfo.get(player.getUniqueId()).title())) {
                 // already has the gui type open - update contents
                 player.getOpenInventory().getTopInventory().setContents(inventory.getContents());
                 if (NotBounties.serverVersion >= 19)
-                    player.getOpenInventory().setTitle(gui.getTitle(player, page, values, replacements));
+                    player.getOpenInventory().setTitle(title);
             } else {
                 player.openInventory(inventory);
             }
-
+            playerInfo.put(player.getUniqueId(), new PlayerGUInfo(page, name, data, displayItems, title));
         }
-        playerInfo.put(player.getUniqueId(), new PlayerGUInfo(page, name, data, values.keySet().toArray(new UUID[0]), player.getOpenInventory().getTitle()));
+
+    }
+
+    public static String createTitle(BedrockGUIOptions guiOptions, Player viewer, long page, List<DisplayItem> displayItems, Object[] data) {
+        return createTitle(guiOptions.getName(), guiOptions.getType(), guiOptions.getMaxPlayers(), guiOptions.isAddPage(), viewer, page, displayItems, data);
+    }
+    private static String createTitle(GUIOptions guiOptions, Player viewer, long page, List<DisplayItem> displayItems, Object[] data) {
+        return createTitle(guiOptions.getName(), guiOptions.getType(), guiOptions.getPlayerSlots().size(), guiOptions.isAddPage(), viewer, page, displayItems, data);
+    }
+    private static String createTitle(String name, String type, int numPlayerSlots, boolean addPage, Player viewer, long page, List<DisplayItem> displayItems, Object[] data) {
+        String title = name;
+        if (type.equals("view-bounty") && data.length > 0 && data[0] instanceof UUID uuid) {
+            double amount = 0;
+            Bounty bounty = BountyManager.getBounty(uuid);
+            if (bounty != null) {
+                amount = showWhitelistedBounties ? bounty.getTotalDisplayBounty() : bounty.getTotalDisplayBounty(viewer);
+            }
+            String playerName = NotBounties.getPlayerName(uuid);
+            title = title.replace("{player}", playerName).replace("{amount}", currencyPrefix + NumberFormatting.formatNumber(amount) + currencySuffix);
+        } else {
+            for (DisplayItem displayItem : displayItems) {
+                if (displayItem instanceof PlayerItem playerItem) {
+                    title = playerItem.parseText(title, viewer);
+                    break;
+                }
+            }
+        }
+        int maxPage;
+        if (type.equals("select-price")) {
+            maxPage = (int) NumberFormatting.getBalance(viewer);
+        } else if (type.equals("bounty-gui")) {
+            int numBounties = BountyManager.getAllBounties(-1).size();
+            int playerSlots = Math.max(numPlayerSlots, 1);
+            maxPage = (int) ((double) numBounties / playerSlots);
+            if (numBounties % playerSlots != 0) {
+                maxPage++;
+            }
+        } else if (reducePageCalculations) {
+            int totalPlayers = loggedPlayers.size();
+            int playerSlots = Math.max(numPlayerSlots, 1);
+            maxPage = (int) ((double) totalPlayers / playerSlots);
+            if (totalPlayers % playerSlots != 0) {
+                maxPage++;
+            }
+        } else {
+            int totalPlayers = displayItems.size();
+            int playerSlots = Math.max(numPlayerSlots, 1);
+            maxPage = (int) ((double) totalPlayers / playerSlots);
+            if (totalPlayers % playerSlots != 0) {
+                maxPage++;
+            }
+        }
+        title = title.replace("{page}", (page + ""))
+                .replace("{page_max}", (maxPage + ""));
+        if (addPage)
+            title = title + " " + page;
+        return parse(title, viewer);
     }
 
 
     @EventHandler
     public void onGUIClose(InventoryCloseEvent event) {
-        if (playerInfo.containsKey(event.getPlayer().getUniqueId()) && playerInfo.get(event.getPlayer().getUniqueId()).getTitle().equals(event.getView().getTitle())) {
+        if (playerInfo.containsKey(event.getPlayer().getUniqueId()) && playerInfo.get(event.getPlayer().getUniqueId()).title().equals(event.getView().getTitle())) {
                 // titles match
                 // return items they have place in the inventory
                 // (only works for bounty-item-select
@@ -257,10 +408,10 @@ public class GUI implements Listener {
                 if (!playerInfo.containsKey(player.getUniqueId()))
                     continue;
                 PlayerGUInfo info = playerInfo.get(player.getUniqueId());
-                if (!info.getGuiType().equals("bounty-item-select")) {
+                if (!info.guiType().equals("bounty-item-select")) {
                     safeCloseGUI(player, false); // close GUI
                     // reopen GUI
-                    openGUI(player, info.getGuiType(), info.getPage(), info.getData());
+                    openGUI(player, info.guiType(), info.page(), info.data());
                 }
             }
         }
@@ -284,10 +435,10 @@ public class GUI implements Listener {
         if (!((Plugin) NotBounties.getInstance()).isEnabled())
             shutdown = true;
         PlayerGUInfo guInfo = playerInfo.get(player.getUniqueId());
-        if (guInfo.getGuiType().equals("bounty-item-select")){
+        if (guInfo.guiType().equals("bounty-item-select")){
             GUIOptions guiOptions = GUI.getGUI("bounty-item-select");
             // give back items
-            Object[] data = guInfo.getData();
+            Object[] data = guInfo.data();
             List<ItemStack[]> deserializedItems = new ArrayList<>();
             for (int i = 1; i < data.length; i++) {
                 String serializedItems = data[i].toString();
@@ -305,8 +456,8 @@ public class GUI implements Listener {
             for (int i = 0; i < currentContents.length; i++) {
                 currentContents[i] = inventory.getContents()[guiOptions.getPlayerSlots().get(i + 1)];
             }
-            if (deserializedItems.size() >= guInfo.getPage()) {
-                deserializedItems.set((int) (guInfo.getPage()-1), currentContents);
+            if (deserializedItems.size() >= guInfo.page()) {
+                deserializedItems.set((int) (guInfo.page()-1), currentContents);
             } else {
                 deserializedItems.add(currentContents);
             }
@@ -348,7 +499,7 @@ public class GUI implements Listener {
             return;
 
         PlayerGUInfo info = playerInfo.get(event.getWhoClicked().getUniqueId());
-        GUIOptions gui = getGUI(info.getGuiType());
+        GUIOptions gui = getGUI(info.guiType());
 
         if (gui == null || event.getRawSlot() == -999)
             return;
@@ -358,75 +509,68 @@ public class GUI implements Listener {
         if (bottomInventory && !guiType.equals("bounty-item-select")) // make sure it is in the top inventory
             return;
         // check if it is a player slot
-        int pageAddition = guiType.equals("select-price") || guiType.equals("confirm-bounty") ? 0 : (int) ((info.getPage() - 1) * gui.getPlayerSlots().size());
-        if (gui.getPlayerSlots().contains(event.getRawSlot()) && (event.getCurrentItem() != null && gui.getPlayerSlots().indexOf(event.getRawSlot()) + pageAddition < info.getPlayers().length && event.getCurrentItem().getType() == Material.PLAYER_HEAD)) {
+        int pageAddition = guiType.equals("select-price") || guiType.equals("confirm-bounty") ? 0 : (int) ((info.page() - 1) * gui.getPlayerSlots().size());
+        if (gui.getPlayerSlots().contains(event.getRawSlot()) && (event.getCurrentItem() != null && gui.getPlayerSlots().indexOf(event.getRawSlot()) + pageAddition < info.displayItems().size() && event.getCurrentItem().getType() == Material.PLAYER_HEAD)) {
             SkullMeta meta = (SkullMeta) event.getCurrentItem().getItemMeta();
             assert meta != null;
-            OfflinePlayer player = Bukkit.getOfflinePlayer(info.getPlayers()[gui.getPlayerSlots().indexOf(event.getRawSlot()) + pageAddition]);
-            String playerName = NotBounties.getPlayerName(player.getUniqueId());
+            DisplayItem displayItem = info.displayItems().get(gui.getPlayerSlots().indexOf(event.getRawSlot()) + pageAddition);
+            UUID playerUUID = displayItem instanceof PlayerItem playerItem ? playerItem.getUuid() : event.getWhoClicked().getUniqueId();
+            String playerName = NotBounties.getPlayerName(playerUUID);
             switch (guiType) {
                 case "bounty-gui":
-                    // remove, edit, and buy back
-                    Bounty bounty = getBounty(player.getUniqueId());
+                    // do click actions
+                    Bounty bounty = BountyManager.getBounty(playerUUID);
                     if (bounty != null) {
-                        if (event.isRightClick()) {
-                            if (event.getWhoClicked().hasPermission("notbounties.admin")) {
-                                // edit
+                        GUIClicks.runClickActions((Player) event.getWhoClicked(), bounty, event.getClick());
+                    } else {
+                        openGUI((Player) event.getWhoClicked(), "bounty-gui", playerInfo.get(event.getWhoClicked().getUniqueId()).page());
+                    }
+                    break;
+                case "view-bounty":
+                    // player is the setter that was clicked
+                    if (event.getWhoClicked().hasPermission(NotBounties.getAdminPermission()) && info.data() != null && info.data().length > 0 && info.data()[0] instanceof UUID uuid) {
+                        Bounty viewedBounty = BountyManager.getBounty(uuid);
+                        if (viewedBounty != null) {
+                            // bounty is valid
+                            if (event.isRightClick()) {
                                 event.getView().close();
-                                TextComponent first = new TextComponent(ChatColor.GOLD + "To edit " + bounty.getName() + "'s bounty");
+                                TextComponent first = new TextComponent(ChatColor.GOLD + "To edit " + playerName + "'s amount on " + viewedBounty.getName() + "'s bounty");
                                 TextComponent click = new TextComponent(ChatColor.YELLOW + "" + ChatColor.BOLD + " Click Here ");
-                                TextComponent last = new TextComponent(ChatColor.GOLD + "and enter the new amount.");
-                                click.setClickEvent(new ClickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/bounty edit " + bounty.getName() + " "));
+                                TextComponent last = new TextComponent(ChatColor.GOLD + "and enter the amount to change " + ChatColor.GRAY + "(e.g. 10, -500, 10k)" + ChatColor.GOLD + ".");
+                                click.setClickEvent(new ClickEvent(ClickEvent.Action.SUGGEST_COMMAND, "/" + pluginBountyCommands.get(0) + " edit " + viewedBounty.getName() + " from " + playerName + " "));
                                 first.addExtra(click);
                                 first.addExtra(last);
                                 event.getWhoClicked().spigot().sendMessage(first);
-                            } else  if (giveOwnMap) {
+                            } else if (event.isLeftClick()) {
                                 event.getView().close();
-                                Bukkit.getServer().dispatchCommand(event.getWhoClicked(), pluginBountyCommands.get(0) + " poster " + playerName);
+                                Bukkit.dispatchCommand(event.getWhoClicked(), pluginBountyCommands.get(0) + " remove " + viewedBounty.getName() + " from " + playerName);
                             }
-                        } else if (event.isLeftClick()) {
-                            if (event.getWhoClicked().hasPermission("notbounties.admin")) {
-                                // remove
-                                openGUI((Player) event.getWhoClicked(), "confirm", 1, player.getUniqueId(), 0);
-
-                            } else if (bounty.getUUID().equals(event.getWhoClicked().getUniqueId()) && buyBack) {
-                                double balance = NumberFormatting.getBalance((Player) event.getWhoClicked());
-                                if (balance >= (int) (bounty.getTotalDisplayBounty() * buyBackInterest)) {
-                                    openGUI((Player) event.getWhoClicked(), "confirm", 1, player.getUniqueId(), (buyBackInterest * bounty.getTotalDisplayBounty()));
-                                } else {
-                                    event.getWhoClicked().sendMessage(parse(prefix + broke, (bounty.getTotalDisplayBounty() * buyBackInterest), (Player) event.getWhoClicked()));
-                                }
-                            } else if (BountyTracker.isEnabled() && (BountyTracker.isGiveOwnTracker() || BountyTracker.isWriteEmptyTrackers()) && event.getWhoClicked().hasPermission("notbounties.tracker")) {
-                                event.getView().close();
-                                Bukkit.getServer().dispatchCommand(event.getWhoClicked(), pluginBountyCommands.get(0) + " tracker " + playerName);
-                            }
-                        }
-                    } else {
-                        if (event.getWhoClicked().hasPermission("notbounties.admin")) {
-                            openGUI((Player) event.getWhoClicked(), "bounty-gui", playerInfo.get(event.getWhoClicked().getUniqueId()).getPage());
-                            event.getWhoClicked().sendMessage(parse(prefix + noBounty, Objects.requireNonNull(meta.getOwningPlayer()).getName(), meta.getOwningPlayer()));
+                        } else {
+                            // no longer has a bounty
+                            openGUI((Player) event.getWhoClicked(), "bounty-gui", 1);
+                            event.getWhoClicked().sendMessage(LanguageOptions.parse(prefix + noBounty, NotBounties.getPlayerName(uuid), (Player) event.getWhoClicked()));
                         }
                     }
                     break;
                 case "set-bounty":
                     if (NumberFormatting.bountyItemsDefaultGUI) {
-                        openGUI((Player) event.getWhoClicked(), "bounty-item-select", ConfigOptions.minBounty, player.getUniqueId().toString());
+                        openGUI((Player) event.getWhoClicked(), "bounty-item-select", ConfigOptions.minBounty, playerUUID.toString());
                     } else {
-                        openGUI((Player) event.getWhoClicked(), "select-price", ConfigOptions.minBounty, player.getUniqueId().toString());
+                        openGUI((Player) event.getWhoClicked(), "select-price", ConfigOptions.minBounty, playerUUID.toString());
                     }
                     break;
                 case "set-whitelist":
                     List<UUID> whitelist = NotBounties.getPlayerWhitelist(event.getWhoClicked().getUniqueId()).getList();
-                    if (!whitelist.remove(player.getUniqueId())) {
+                    if (!whitelist.remove(playerUUID)) {
                         if (whitelist.size() < 10)
-                            whitelist.add(player.getUniqueId());
+                            whitelist.add(playerUUID);
                         else
                             event.getWhoClicked().sendMessage(parse(prefix + whitelistMax, (Player) event.getWhoClicked()));
                     }
-                    openGUI((Player) event.getWhoClicked(), "set-whitelist", 1, info.getData());
+                    openGUI((Player) event.getWhoClicked(), "set-whitelist", 1, info.data());
                     break;
                 case "select-price":
-                    Bukkit.dispatchCommand(event.getWhoClicked(),   pluginBountyCommands.get(0) + " " + playerName + " " + playerInfo.get(event.getWhoClicked().getUniqueId()).getPage());
+                    Bukkit.dispatchCommand(event.getWhoClicked(),   pluginBountyCommands.get(0) + " " + playerName + " " + playerInfo.get(event.getWhoClicked().getUniqueId()).page());
                     if (!confirmation)
                         event.getView().close();
                     break;
@@ -446,7 +590,15 @@ public class GUI implements Listener {
         } else {
             // not a player slot - custom item or inventory
             // current item may be null
-            CustomItem customItem = gui.getCustomItem(event.getRawSlot(), info.getPage(), getGUIValues((Player) event.getWhoClicked(), guiType, info.getPage(), info.getData()).size());
+            CustomItem customItem = gui.getCustomItem(event.getRawSlot(), info.page(), info.displayItems().size());
+            if (guiType.equals("challenges") && gui.getPlayerSlots().contains(event.getRawSlot()) && gui.getPlayerSlots().indexOf(event.getRawSlot()) < ChallengeManager.getConcurrentChallenges()) {
+                // clicked on a challenge item - check if they can claim
+                if (ChallengeManager.tryClaim((Player) event.getWhoClicked(), gui.getPlayerSlots().indexOf(event.getRawSlot()))) {
+                    // reopen gui
+                    openGUI((Player) event.getWhoClicked(), "challenges", 1);
+                }
+                return;
+            }
             if (customItem == null) {
                 // If in the bounty item select inventory, allow user to move non-custom items around and not the first player slot
                 if (guiType.equals("bounty-item-select") && (bottomInventory || (!gui.getPlayerSlots().isEmpty() && event.getRawSlot() !=  gui.getPlayerSlots().get(0)))) {
@@ -462,7 +614,7 @@ public class GUI implements Listener {
                                     return;
                                 if (playerInfo.containsKey(event.getWhoClicked().getUniqueId())) {
                                     PlayerGUInfo newOptions = playerInfo.get(event.getWhoClicked().getUniqueId());
-                                    if (info.getPage() == newOptions.getPage() && newOptions.getGuiType().equals(info.getGuiType())) {
+                                    if (info.page() == newOptions.page() && newOptions.guiType().equals(info.guiType())) {
                                         // page hasn't changed
                                         GUIOptions guiOptions = GUI.getGUI("bounty-item-select");
                                         // read current inventory
@@ -471,11 +623,11 @@ public class GUI implements Listener {
                                             currentContents[i] = event.getInventory().getContents()[guiOptions.getPlayerSlots().get(i + 1)];
                                         }
                                         // create new data
-                                        Object[] data = new Object[(int) Math.max(newOptions.getData().length, newOptions.getPage() + 1)];
-                                        System.arraycopy(newOptions.getData(), 0, data, 0, newOptions.getData().length);
-                                        data[(int) (newOptions.getPage())] = SerializeInventory.itemStackArrayToBase64(currentContents);
+                                        Object[] data = new Object[(int) Math.max(newOptions.data().length, newOptions.page() + 1)];
+                                        System.arraycopy(newOptions.data(), 0, data, 0, newOptions.data().length);
+                                        data[(int) (newOptions.page())] = SerializeInventory.itemStackArrayToBase64(currentContents);
                                         // open gui
-                                        openGUI((Player) event.getWhoClicked(), "bounty-item-select", newOptions.getPage(), data);
+                                        openGUI((Player) event.getWhoClicked(), "bounty-item-select", newOptions.page(), data);
                                     }
                                 }
                             }
